--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -252,7 +252,7 @@ Hero
 ========================================================================== */
 .hero {
   min-height: 750px;
-  background: url('../img/picnic.png') center center;
+  background: url('../img/picnic.jpg') center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
